--- a/app/src/main/res/layout/waitingforapproval.xml
+++ b/app/src/main/res/layout/waitingforapproval.xml
@@ -8,25 +8,11 @@
     android:orientation="vertical"
     tools:context=".Waitingforapproval">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="400dp"
         android:layout_height="wrap_content"
-        android:gravity="center|left"
-        android:orientation="vertical"
-        android:paddingLeft="10dp"
-        android:paddingTop="200dp">
-
-        <ImageView
-            android:id="@+id/imgvActWTitle1"
-            android:layout_width="350dp"
-            android:layout_height="120dp"
-            app:srcCompat="@drawable/welcome" />
-
-        <ImageView
-            android:id="@+id/imgvActWTitle2"
-            android:layout_width="350dp"
-            android:layout_height="70dp"
-            app:srcCompat="@drawable/welcome_txt" />
-    </LinearLayout>
-
+        android:layout_gravity="center"
+        android:paddingTop="150dp"
+        app:srcCompat="@drawable/waitingforapproval" />
 </LinearLayout>
